--- a/ATM.html
+++ b/ATM.html
@@ -5,8 +5,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
-  <link rel="stylesheet" href="../css/ATM.css" type="text/css"/>
-  <script src="../javascript/jquery.min.js"></script>
+  <link rel="stylesheet" href="./css/ATM.css" type="text/css"/>
+  <script src="./javascript/jquery.min.js"></script>
   
 </head>
 
@@ -28,7 +28,7 @@
 		<div class="Image"></div>
 		<div class="About">	
 
-			<p>Banks aim to provide 24-hour daily ATM services. This web interface offers a method to predict ATM problems; To predict whether they will run into a problem on a specific day or not.
+			<p>Banks aim at providing 24-hour daily ATM services. This web interface offers a method to predict ATM problems; To predict whether they will run into a problem on a specific day or not.
 			</p>
 	
 			<p>Prediction is based on some learning models trained upon features derived from ATM supervision log files. This project was undertaken as my B.Sc. thesis at Amirkabir University of Technology.
@@ -39,7 +39,7 @@
 			<p>If you wish to predict your ATM, use the menu on the top-left corner of the site. You also need to give some information about your ATM's functionality such as total number of daily transactions, total credit of daily transactions and daily supervision length.
 			</p>
 	  		<p>
-			Please take note of these example values. Total number of daily transcations e.g. <span class="Help_Span">600</span>. Total credit of daily transactions in million Rials e.g. <span class="Help_Span">800</span>. Daily supervision length in hours and minutes e.g. <span class="Help_Span">00:20</span>. You, as a bank official, have access to these data. For an exact prediction, please specify correct values. 
+			Example values: Total number of daily transcations e.g. <span class="Help_Span">600</span>. Total credit of daily transactions in million Rials e.g. <span class="Help_Span">800</span>. Daily supervision length in hours and minutes e.g. <span class="Help_Span">00:20</span>. You, as a bank official, have access to these data. For an exact prediction, please specify correct values.
 			</p>		
 		</div>
 	
@@ -60,7 +60,7 @@
 		</div>
 		<div class="Result">
 			<div class="Loading">
-				<img src="../image/loading.gif" height="40" width="40">
+				<img src="./image/loading.gif" height="40" width="40">
 			</div>
 			<div class="Error">
 				<p class="Error">Wrong input data! Please go to the help section for more information about the expected input.</p>
@@ -106,7 +106,7 @@
 		</div>
 
 		<div class="Top" onclick="Top()">
-			<img src="../image/top.png" height="40" width="40">
+			<img src="./image/top.png" height="40" width="40">
 		</div>
 
 	</div>
@@ -118,7 +118,7 @@
 
 	</div>
 
-	<script src="../javascript/ATM.js"></script>
+	<script src="./javascript/ATM.js"></script>
 
 </body>
 
